--- a/index.html
+++ b/index.html
@@ -416,7 +416,7 @@
             <p class="description">Amazon DynamoDB is a fully managed, serverless, key-value NoSQL database designed to run high-performance applications at any scale. DynamoDB offers built-in security, continuous backups, automated multi-Region replication, in-memory caching, and data import and export tools.</p>
           </div>
           <div class="col-lg-4 col-md-6 icon-box" data-aos="fade-up" data-aos-delay="500">
-            <div class="icon"><i class="lambda-icon"></i></div>
+            <div class="icon"><i class="fas fa-play"></i></div>
             <h4 class="title"><a href="">Lambda</a></h4>
             <p class="description">Lambda runs your code on high availability compute infrastructure and performs all the administration of your compute resources. This includes server and operating system maintenance, capacity provisioning and automatic scaling, code and security patch deployment, and code monitoring and logging.</p>
           </div>
